# e-treasure-hunt

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  manage.py  prebuild.sh  pyproject.toml  requirements.txt  startup.sh  upload.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: linting.yml
admin_scripts/: analysis.py  calculate_winners.py  download.py  level_validation.py  upload.py
azure/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
dummy/: about.json  blurb.txt
hunt/: admin.py  apiviews.py  apps.py  constants.py  hint_request.py  level_mgr.py  levels.py  models.py  urls.py  utils.py  views.py
hunt/chat/: consumers.py  routing.py
hunt/migrations/: 0005_remove_chatmessage_room_chatmessage_level_and_more.py  0006_alter_chatmessage_name.py  0007_rename_event_type_to_kind.py  0008_chatmessage_hunt_chatme_team_id_1959c2_idx.py
hunt/static/: alternate-map.js  base.css  chat.js  confirm.js  google-map.js  map-style.css  mgmt-style.css  style.css  welcome-style.css
hunt/templates/: alternate-map.html  base.html  google-map.html  level-mgmt.html  level.html  levels.html  mgmt-base.html  mgmt.html  nothing.html  oops.html  room.html  search.html  welcome.html  work-time.html
hunt/templates/registration/: login.html
hunt/tests/: conftest.py  test_api.py  test_chat.py  test_hint_request.py  test_level_mgr.py  test_levels.py  test_models.py  test_utils.py  test_views.py
treasure/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
